<resources>
    <string name="app_name">AREA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Sign Up</string>
    <string name="or">or</string>
    <string name="already_registered">Already registered ?</string>
    <string name="click">Click</string>
    <string name="here">here</string>
    <string name="google_registration">Start with Google</string>
    <string name="twitter_registration">Start with Twitter</string>
    <string name="different_password">Those passwords didn\'t match. Try again.</string>
    <string name="no_confirm_password">Confirm your password.</string>
    <string name="no_email">Enter your email address.</string>
    <string name="no_password">Enter a password.</string>
    <string name="not_registered">Not registered yet ?</string>
    <string name="login">Sign In</string>
    <string name="validation_password">Confirm</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="successful_registration">Registration successful !</string>
    <string name="email_confirmation_message">We\'ve sent you an email in order to validate your account. Check your spams if you don\'t see it !</string>
    <string name="verified_email">Email verification successful !</string>
    <string name="verified_email_message">You can login right now.</string>
    <string name="security_code">Security code</string>
    <string name="change_api_url">Change api url</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="api_url">Api url</string>
    <string name="change_url_success">Api url successfully modified</string>
    <string name="change_url_fail">Url is invalid</string>
    <string name="user_text">My account</string>
    <string name="invalid_2fa_code">The code must be 6-digits long</string>
    <string name="invalid_token">Invalid token</string>
    <string name="user_account">My account</string>
    <string name="user_change_password">Change my password</string>
    <string name="activate_two_fa">Activate double authentication</string>
    <string name="double_authentication">Double authentication</string>
    <string name="copy">Copy code</string>
    <string name="disable_two_fa">Disable double authentication</string>
    <string name="log_out">Log out</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="successful_password_reset">Password reset successful !</string>
    <string name="password_reset_confirmation_message">We\'ve sent you an email in order to set your new password. Check your spams if you don\'t see it !</string>
    <string name="success_new_password">New password successfully set !</string>
    <string name="subscribe_service">Subscribe to this service ?</string>
    <string name="subscribe_service_message">Do you want to subscribe to</string>
    <string name="storage_name">com.b12powered.area</string>
    <string name="token_key">jwt-token</string>
    <string name="api_url_key">api_url</string>
    <string name="area_name">Area name</string>
    <string name="active_at_creation">Active at creation</string>
    <string name="submit">Submit</string>
    <string name="create_area">Create new area</string>
    <string name="empty_area_name">Area name cannot be empty</string>
    <string name="add_action">Add action to your area</string>
    <string name="edit_action">Edit action parameters</string>
    <string name="next">Next</string>
    <string name="missing_parameter">Missing parameter</string>
    <string name="area_added">Area successfully added !</string>
    <string name="new_reaction_message">Do you want to add another reaction to this area ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_reaction">Add reaction to your area</string>
    <string name="edit_reaction">Edit reaction parameters</string>
    <string name="confirm_exit">Do you really want to exit this page ?</string>
    <string name="exit_area_message">This action will take you back to homepage. Your area will still be saved.</string>
    <string name="delete_areas">Remove area</string>
    <string name="show_reactions">Show reactions</string>
    <string name="what_you_want">What do you want to do ?</string>
    <string name="delete_reaction">Do you really want to delete this reaction ?</string>
    <string name="no_reaction">( You don\'t have any reaction for this action )</string>
    <string name="exit_app">Do you want to exit applicaton ?</string>
    <string name="already_visited">already_visited</string>
    <string name="home_title">My services</string>
    <string name="search_title">Discover</string>
    <string name="area_enabled">Area enabled</string>
    <string name="area_disabled">Area disabled</string>
</resources>
